# rag-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  chunking.py  config.py  database.py  dependencies.py  embeddings.py  llm.py  main.py  models.py  rag.py  schemas.py  vectorstore.py
app/api/: documents.py  health.py  query.py
tests/: conftest.py  test_api_documents.py  test_api_query.py  test_chunking.py  test_embeddings.py  test_health.py  test_llm_claude.py  test_rag.py  test_vectorstore.py
